# ecom-data-pipeline

./: .gitignore  LICENCE  README.md  docker-compose.yaml  pyproject.toml
dags/: pipeline_dag.py
src/database/: connection.py
src/extract/: dollarAPI.py  extract_api_dollar.py  extract_api_exchange.py  extract_db_tables.py
src/load/: load_tables.py
src/transform/: transform_dollar.py  transform_exchange.py  transform_tables.py
src/utils/: logging_config.py
tests/: extract_api_dollar.py  test_dollarAPI.py  test_extract_api_dollar.py
tests/extract/: test_extract_api_dollar.py  test_extract_api_exchange.py  test_extract_db_tables.py
tests/transform/: test_transform_dollar.py  test_transform_exchange.py  test_transform_tables.py
